[project]
name = "David Willia,s"
description = "AOC 2023"
version = "0.1.0"
authors = [
    { name = "David Williams", email = "" }
]

[tool.ruff]
line-length = 150
select = ["F", "E", "W", "I001"]

[tool.black]
line-length = 150

[tool.mypy]
    exclude = [
        'venv',
        '.venv',
    ]
    strict = true